# universal-hashes

./: .travis.yml  Cargo.toml  README.md  SECURITY.md  build_nostd.sh
.github/workflows/: ghash.yml  poly1305.yml  polyval.yml  publish.yml  security-audit.yml  workspace.yml
benches/: Cargo.toml  README.md
benches/src/: polyval.rs  utils.rs
ghash/: CHANGELOG.md  CHANGES.md  Cargo.toml  README.md
ghash/benches/: ghash.rs
ghash/src/: lib.rs
ghash/tests/: lib.rs
poly1305/: CHANGELOG.md  CHANGES.md  Cargo.toml  LICENSE-MIT  README.md
poly1305/benches/: poly1305.rs
poly1305/src/: autodetect.rs  avx2.rs  backend.rs  fuzz.rs  lib.rs  soft.rs
poly1305/src/avx2/: helpers.rs
poly1305/src/backend/: autodetect.rs  avx2.rs  neon.rs  simd.rs  soft.rs
poly1305/src/backend/avx2/: helpers.rs
poly1305/tests/: lib.rs
polyval/: CHANGELOG.md  CHANGES.md  Cargo.toml  README.md
polyval/benches/: polyval.rs
polyval/src/: autodetect.rs  backend.rs  backends.rs  clmul_backend.rs  field.rs  field_element.rs  ghash.rs  hazmat.rs  lib.rs  mulx.rs  tag.rs  u32_backend.rs  u64_backend.rs  u64_soft.rs
polyval/src/backend/: autodetect.rs  avx2.rs  clmul.rs  common.rs  intrinsics.rs  neon.rs  pmull.rs  soft.rs  soft32.rs  soft64.rs
polyval/src/backend/intrinsics/: armv8.rs  avx2.rs  neon.rs  x86.rs
polyval/src/backend/soft/: soft32.rs  soft64.rs
polyval/src/backends/: clmul.rs  soft64.rs
polyval/src/field/: backend.rs  pclmulqdq.rs  soft.rs
polyval/src/field/backend/: pclmulqdq.rs  soft.rs
polyval/src/field_element/: armv8.rs  autodetect.rs  common.rs  mul32.rs  mul64.rs  mulx.rs  soft.rs  x86.rs
polyval/src/field_element/soft/: soft32.rs  soft64.rs
polyval/tests/: lib.rs  long_input.rs  proptests.rs
