[package]
name = "benches"
version = "0.0.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = "Criterion benchmarks of the universal-hashes crates"
edition = "2021"
publish = false

[workspace]

[dependencies]
polyval = { path = "../polyval/" }

criterion = "0.8"
criterion-cycles-per-byte = { version = "0.8", optional = true }

[features]
cpb = ["dep:criterion-cycles-per-byte"]

[[bench]]
name = "polyval"
path = "src/polyval.rs"
harness = false
