[package]
name = "ghash"
version = "0.6.0-rc.5"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
Universal hash over GF(2^128) useful for constructing a Message Authentication Code (MAC),
as in the AES-GCM authenticated encryption cipher.
"""
documentation = "https://docs.rs/ghash"
repository = "https://github.com/RustCrypto/universal-hashes"
readme = "README.md"
keywords = ["aes-gcm", "crypto", "universal-hashing"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"
edition = "2024"

[dependencies]
polyval = { version = "0.7.0-rc.7", features = ["hazmat"] }

# optional dependencies
zeroize = { version = "1", optional = true, default-features = false }

[features]
zeroize = ["polyval/zeroize", "dep:zeroize"]

[dev-dependencies]
hex-literal = "1"
