[package]
name = "poly1305"
version = "0.9.0-rc.3"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = "The Poly1305 universal hash function and message authentication code"
documentation = "https://docs.rs/poly1305"
repository = "https://github.com/RustCrypto/universal-hashes"
keywords = ["crypto", "chacha20", "mac", "salsa20", "universal-hashing"]
categories = ["cryptography", "no-std"]
readme = "README.md"
rust-version = "1.85"
edition = "2024"

[dependencies]
universal-hash = { version = "0.6.0-rc.4", default-features = false }
zeroize = { version = "1", optional = true, default-features = false }

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2"

[dev-dependencies]
hex-literal = "1"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(fuzzing)", "cfg(poly1305_force_soft)"]
