[package]
name = "poly1305"
version = "0.9.0-rc.6"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/poly1305"
readme = "README.md"
repository = "https://github.com/RustCrypto/universal-hashes"
license = "Apache-2.0 OR MIT"
keywords = ["crypto", "chacha20", "mac", "salsa20", "universal-hashing"]
categories = ["cryptography", "no-std"]
description = "The Poly1305 universal hash function and message authentication code"

[dependencies]
universal-hash = "0.6"
zeroize = { version = "1", optional = true, default-features = false }

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.3"

[dev-dependencies]
hex-literal = "1"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(fuzzing)',
    'cfg(poly1305_backend, values("soft"))'
]
