[package]
name = "poly1305"
version = "0.9.0-rc.6"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/poly1305"
readme = "README.md"
repository = "https://github.com/RustCrypto/universal-hashes"
license = "Apache-2.0 OR MIT"
keywords = ["crypto", "chacha20", "mac", "salsa20", "universal-hashing"]
categories = ["cryptography", "no-std"]
description = "The Poly1305 universal hash function and message authentication code"

[dependencies]
universal-hash = "0.6"
zeroize = { version = "1", optional = true, default-features = false }

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.3"

[dev-dependencies]
hex-literal = "1"

[lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unreachable_pub = "warn"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(fuzzing)',
    'cfg(poly1305_backend, values("soft"))'
]

[lints.clippy]
borrow_as_ptr = "warn"
cast_lossless = "warn"
cast_possible_truncation = "allow" # TODO(tarcieri): warn
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
from_iter_instead_of_collect = "warn"
implicit_saturating_sub = "warn"
manual_assert = "warn"
map_unwrap_or = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
mod_module_files = "warn"
must_use_candidate = "warn"
needless_range_loop = "allow"
ptr_as_ptr = "warn"
redundant_closure_for_method_calls = "warn"
ref_as_ptr = "warn"
return_self_not_must_use = "warn"
semicolon_if_nothing_returned = "warn"
trivially_copy_pass_by_ref = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
undocumented_unsafe_blocks = "allow" # TODO(tarcieri): warn
unnecessary_safety_comment = "warn"
unwrap_used = "allow" # TODO(tarcieri): warn
