[package]
name = "polyval"
version = "0.7.0-rc.3"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
POLYVAL is a GHASH-like universal hash over GF(2^128) useful for constructing
a Message Authentication Code (MAC)
"""
documentation = "https://docs.rs/polyval"
repository = "https://github.com/RustCrypto/universal-hashes"
readme = "README.md"
keywords = ["aes-gcm", "aes-gcm-siv", "crypto", "ghash", "universal-hashing"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"
edition = "2024"

[dependencies]
cfg-if = "1"
universal-hash = { version = "0.6.0-rc.3", default-features = false }
zeroize = { version = "1", optional = true, default-features = false }

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2"

[dev-dependencies]
hex-literal = "1"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(polyval_force_soft)"]

[package.metadata.docs.rs]
all-features = true
