[package]
name = "polyval"
version = "0.7.0-rc.3"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
POLYVAL is a GHASH-like universal hash over GF(2^128) useful for constructing
a Message Authentication Code (MAC)
"""
documentation = "https://docs.rs/polyval"
repository = "https://github.com/RustCrypto/universal-hashes"
readme = "README.md"
keywords = ["aes-gcm", "aes-gcm-siv", "crypto", "ghash", "universal-hashing"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"
edition = "2024"

[dependencies]
cpubits = "0.1.0-rc.1"
universal-hash = { version = "0.6.0-rc.8", default-features = false }
zeroize = { version = "1", optional = true, default-features = false }

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2"

[dev-dependencies]
hex-literal = "1"

[lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(polyval_backend, values("soft"))']

[lints.clippy]
borrow_as_ptr = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
from_iter_instead_of_collect = "warn"
implicit_saturating_sub = "warn"
manual_assert = "warn"
map_unwrap_or = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
mod_module_files = "warn"
must_use_candidate = "warn"
needless_range_loop = "allow"
ptr_as_ptr = "warn"
redundant_closure_for_method_calls = "warn"
ref_as_ptr = "warn"
return_self_not_must_use = "warn"
semicolon_if_nothing_returned = "warn"
trivially_copy_pass_by_ref = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
suspicious_arithmetic_impl = "allow" # POLYVAL arithmetic ops are atypical
#undocumented_unsafe_blocks = "warn" TODO
unnecessary_safety_comment = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"

[package.metadata.docs.rs]
all-features = true
